Issue #1252638 by tim.plunkett: Force event contents to wrap.

--- a/css/fullcalendar.theme.css
+++ b/css/fullcalendar.theme.css
@@ -1,3 +1,7 @@
+/* Force contents to wrap */
+.fc-event {
+  word-wrap: break-word;
+}
 
 /* Undo Drupal default theme link colors */
 .fc-content a:link,
